overflow-x-hidden was preventing nav to reappear on hideOnScroll. all elements will appear on Y axis for now.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,6 @@ ul li {
   margin-bottom: 0.5em; 
 }
 
-body,html {
-  overflow-x: hidden;
-}
-
 .h-inherit {
   height: inherit;
 }
